--- a/index.html
+++ b/index.html
@@ -116,19 +116,19 @@
                     
                     <div class="services__content-group">
                         <div class="services__content">
-                            <div class="services__text">1</div>
+                            <div class="services__text">TEXT 1</div>
                         </div>
                         <div class="services__content">
-                            <div class="services__text">2</div>
+                            <div class="services__text">TEXT 2</div>
                         </div>
                         <div class="services__content">
-                            <div class="services__text">3</div>
+                            <div class="services__text">TEXT 3</div>
                         </div>
                         <div class="services__content">
-                            <div class="services__text">4</div>
+                            <div class="services__text">TEXT 4</div>
                         </div>
                         <div class="services__content">
-                            <div class="services__text">5</div>
+                            <div class="services__text">TEXT 5</div>
                         </div>
                     </div>
                 </div>
