--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
 
     <div class="wrapper">
-        <header class="header">
+        <header class="header" id="#main">
             <div class="container">
                 <div class="header__inner">
                     <div class="header__logo">
@@ -49,16 +49,16 @@
                         <nav class="menu">
                             <ul class="menu__list">
                                 <li class="menu__item">
-                                    <a class="menu__link" href="">Гавная</a>
+                                    <a class="menu__link" href="/">Гавная</a>
                                 </li>
                                 <li class="menu__item">
-                                    <a class="menu__link" href="">О нас</a>
+                                    <a class="menu__link" href="#aboutus">О нас</a>
                                 </li>
                                 <li class="menu__item">
-                                    <a class="menu__link" href="">Отзывы</a>
+                                    <a class="menu__link" href="#reviews">Отзывы</a>
                                 </li>
                                 <li class="menu__item">
-                                    <a class="menu__link" href="">Контакты</a>
+                                    <a class="menu__link" href="#contact">Контакты</a>
                                 </li>
                             </ul>
                         </nav>
@@ -140,18 +140,21 @@
                 <div class="application__inner">
                     <form class="application__form" method="POST">
 
-                        <label for="persone-phone">
-                            
-                        </label>
 
-                        <input type="hidden" name="check-bot" id="check-bot__application">
+                        <div class="input__wrapper">
+                            <input name="file" type="file" name="file" id="input__file" class="input input__file">
+                            <label for="input__file" class="input__file-button">
+                               <span class="input__file-icon-wrapper"><i class="fas fa-file-import"></i></span>
+                               <span class="input__file-button-text">Выберите файл</span>
+                            </label>
+                         </div>
                         <button type="submit" class="application__submit">Отправить анкету</button>
                     </form>
                 </div>
             </div>
         </section>
 
-        <section class="aboutus">
+        <section class="aboutus" id="aboutus">
             <div class="container">
                 <div class="aboutus__inner">
                     <h3>О компании</h3>
@@ -188,7 +191,7 @@
 
 
 
-        <div class="reviews">
+        <div class="reviews" id="reviews">
             <div class="container">
                 <div class="reviews__inner">
                     <div class="reviews__title">
@@ -204,7 +207,7 @@
         </div>
 
 
-        <section class="contact">
+        <section class="contact" id="contact">
             <div class="container">
                 <div class="contact__inner">
                     <div class="contact__info">
