--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                                 <li class="menu__item">
                                     <a class="menu__link" href="#contact">Контакты</a>
                                 </li>
+                                <li class="menu__item">
+                                    <a class="form-link" href="">Скачать анкету</a>
+                                </li>
                             </ul>
                         </nav>
                     </div>
@@ -75,7 +78,7 @@
             <div class="container">
                 <div class="head-section__inner">
                     <div class="head-section__title">
-                        <h1>Трудоустройство на морские и речные судна</h1>
+                        <h1>Трудоустройство на морские и речные суда</h1>
                         <span>Помощь в оформлении документов Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et ullam officia labore accusantium alias ad. Ducimus repellat illo doloribus labore illum tempore in, dolor porro nobis repudiandae reprehenderit voluptate adipisci?</span>
                     </div>
                     
@@ -220,92 +223,98 @@
         <section class="contact" id="contact">
             <div class="container">
                 <div class="contact__inner">
-                    <div class="contact__info">
-                        <div class="contact__item">
-                            <h4><i class="fas fa-home"></i>Адрес</h4>
-                            <p>198168, Санкт-Петербург, Ленинский проспект, дом 15</p>
+                    <div class="contact__title">
+                        <h3>Контакты</h>
+                    </div>
+                    <div class="contact__content">
+                        <div class="contact__info">
+                            <div class="contact__item">
+                                <h4><i class="fas fa-home"></i>Адрес</h4>
+                                <p>198168, Санкт-Петербург, Ленинский проспект, дом 15</p>
+                            </div>
+                            <div class="contact__item">
+                                <h4><i class="fas fa-mobile-alt"></i>Телефоны</h4>
+                                <ul class="contact__phone-list">
+                                    <li class="contact__phone-item">
+                                        <a class="contact__phone-href" href="tel:+7 (900) 000-00-00">
+                                            +7 (900) 000-00-00 
+                                        </a>
+                                        | Отдел 1
+                                    </li>
+                                    <li class="contact__phone-item">
+                                        <a class="contact__phone-href" href="tel:+7 (900) 000-00-00">
+                                            +7 (900) 000-00-00
+                                        </a>
+                                        | Отдел 2
+                                    </li>
+                                    <li class="contact__phone-item">
+                                        <a class="contact__phone-href" href="tel:+7 (900) 000-00-00">
+                                            +7 (900) 000-00-00
+                                        </a>
+                                        | Отдел 3
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="contact__item">
+                                <h4><i class="far fa-envelope"></i>Email</h4>
+                                <ul class="contact__email-list">
+                                    <li class="contact__email-item">
+                                        <a class="contact__email-href" href="mailto:work@crewingplanet.ru">
+                                            work@crewingplanet.ru
+                                        </a>
+                                        | для Анкет
+                                    </li>
+                                    <li class="contact__email-item">
+                                        <a class="contact__email-href" href="mailto:media@crewingplanet.ru">
+                                            media@crewingplanet.ru
+                                        </a>
+                                        | для Сотрудничества
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="contact__item">
+                                <h4><i class="fas fa-users"></i>Соц. сети</h4>
+                                <ul class="contact__social-list">
+                                    <li class="contact__social-item">
+                                        <a class="contact__social-link" href="" >
+                                            <i class="fab fa-whatsapp"></i>
+                                        </a>
+                                    </li>
+                                    <li class="contact__social-item">
+                                        <a class="contact__social-link" href="" >
+                                            <i class="fab fa-vk"></i>
+                                        </a>
+                                    </li>
+                                    <li class="contact__social-item">
+                                        <a class="contact__social-link" href="" >
+                                            <i class="fab fa-instagram"></i>
+                                        </a>
+                                    </li>
+                                    <li class="contact__social-item">
+                                        <a class="contact__social-link" href="" >
+                                            <i class="fab fa-facebook-square"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="contact__item">
-                            <h4><i class="fas fa-mobile-alt"></i>Телефоны</h4>
-                            <ul class="contact__phone-list">
-                                <li class="contact__phone-item">
-                                    <a class="contact__phone-href" href="tel:+7 (900) 000-00-00">
-                                        +7 (900) 000-00-00 
-                                    </a>
-                                    | Отдел 1
-                                </li>
-                                <li class="contact__phone-item">
-                                    <a class="contact__phone-href" href="tel:+7 (900) 000-00-00">
-                                        +7 (900) 000-00-00
-                                    </a>
-                                    | Отдел 2
-                                </li>
-                                <li class="contact__phone-item">
-                                    <a class="contact__phone-href" href="tel:+7 (900) 000-00-00">
-                                        +7 (900) 000-00-00
-                                    </a>
-                                    | Отдел 3
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="contact__item">
-                            <h4><i class="far fa-envelope"></i>Email</h4>
-                            <ul class="contact__email-list">
-                                <li class="contact__email-item">
-                                    <a class="contact__email-href" href="mailto:work@crewingplanet.ru">
-                                        work@crewingplanet.ru
-                                    </a>
-                                    | для Анкет
-                                </li>
-                                <li class="contact__email-item">
-                                    <a class="contact__email-href" href="mailto:media@crewingplanet.ru">
-                                        media@crewingplanet.ru
-                                    </a>
-                                    | для Сотрудничества
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="contact__item">
-                            <h4><i class="fas fa-users"></i>Соц. сети</h4>
-                            <ul class="contact__social-list">
-                                <li class="contact__social-item">
-                                    <a class="contact__social-link" href="" >
-                                        <i class="fab fa-whatsapp"></i>
-                                    </a>
-                                </li>
-                                <li class="contact__social-item">
-                                    <a class="contact__social-link" href="" >
-                                        <i class="fab fa-vk"></i>
-                                    </a>
-                                </li>
-                                <li class="contact__social-item">
-                                    <a class="contact__social-link" href="" >
-                                        <i class="fab fa-instagram"></i>
-                                    </a>
-                                </li>
-                                <li class="contact__social-item">
-                                    <a class="contact__social-link" href="" >
-                                        <i class="fab fa-facebook-square"></i>
-                                    </a>
-                                </li>
-                            </ul>
+                        <div class="contact__form">
+                            <form class="contact__call-back" method="POST">
+                                <label class="contact__group" for="">
+                                    <input class="contact__input" type="text" placeholder="Full name">
+                                </label>
+                                <label class="contact__group" for="">
+                                    <input class="contact__input" type="text" placeholder="Phone" data-mask="+0 (000) 000-00-00">
+                                </label>
+                                <label class="contact__group" for="">
+                                    <textarea class="contact__textarea" name="" id="" cols="30" rows="3" placeholder="Message"></textarea>
+                                </label>
+                                <input type="hidden" name="check-bot__contact">
+                                <button class="contact__submit" type="submit">Отправить сообщение</button>
+                            </form>
                         </div>
                     </div>
-                    <div class="contact__form">
-                        <form class="contact__call-back" method="POST">
-                            <label class="contact__group" for="">
-                                <input class="contact__input" type="text" placeholder="Full name">
-                            </label>
-                            <label class="contact__group" for="">
-                                <input class="contact__input" type="text" placeholder="Phone" data-mask="+0 (000) 000-00-00">
-                            </label>
-                            <label class="contact__group" for="">
-                                <textarea class="contact__textarea" name="" id="" cols="30" rows="3" placeholder="Message"></textarea>
-                            </label>
-                            <input type="hidden" name="check-bot__contact">
-                            <button class="contact__submit" type="submit">Отправить сообщение</button>
-                        </form>
-                    </div>
+                    
                 </div>
             </div>
         </section>
