--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             </div>
         </section>
 
-        <section class="license">
+        <!-- <section class="license">
             <div class="container">
                 <div class="license__inner">
                     <div class="license__title">
@@ -191,7 +191,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
 
