--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
     
 </head>
 <body>
-<!-- 111 -->
     <div class="wrapper">
         <header class="header" id="#main">
             <div class="container">
@@ -102,7 +101,7 @@
             </div>
         </section>
         
-        <section class="services">
+        <!-- <section class="services">
 
             <div class="container">
                 <div class="services__inner">
@@ -127,7 +126,7 @@
                 </div>
             </div>
 
-        </section>
+        </section> -->
 
 
         <section class="callback">
