--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         <div class="review__item">
                             <div class="review__item-title">Иван Петров</div>
                             <div class="review__item-text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus non incidunt amet soluta magnam aut voluptatibus obcaecati, nesciunt molestiae delectus alias sed animi at sint magni voluptatum minus ipsam quisquam? 
+                                1
                             </div>
                             <div class="review__item-info">
                                 <span>Санкт-Петербрг -> Литва</span>
@@ -236,7 +236,7 @@
                         <div class="review__item">
                             <div class="review__item-title">Иван Петров</div>
                             <div class="review__item-text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus non incidunt amet soluta magnam aut voluptatibus obcaecati, nesciunt molestiae delectus alias sed animi at sint magni voluptatum minus ipsam quisquam? 
+                                2
                             </div>
                             <div class="review__item-info">
                                 <span>Санкт-Петербрг -> Литва</span>
@@ -246,7 +246,7 @@
                         <div class="review__item">
                             <div class="review__item-title">Иван Петров</div>
                             <div class="review__item-text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus non incidunt amet soluta magnam aut voluptatibus obcaecati, nesciunt molestiae delectus alias sed animi at sint magni voluptatum minus ipsam quisquam? 
+                                3
                             </div>
                             <div class="review__item-info">
                                 <span>Санкт-Петербрг -> Литва</span>
@@ -510,6 +510,21 @@
                 speed: 1000,
                 easing: 'linear',
                 centerMode: true,
+                responsive: [
+                    {
+                        breakpoint: 575.98,
+                        settings: {
+                            slidesToShow: 1,
+                            slidesToScroll: 1,
+                            infinite: true,
+                            dots: true,
+                            centerMode: false,
+                            fade: true,
+                            cssEase: 'linear',
+                            // adaptiveHeight: true
+                        }
+                    }
+                ]
             });
         });
 
