--- a/index.html
+++ b/index.html
@@ -480,10 +480,10 @@
                     </div>
                 </div>
                 <div class="mobile-bar__item">
-                    <i class="far fa-envelope"></i>
+                    <a href="mailto:work@crewingplanet.ru"><i class="far fa-envelope"></i></a>
                 </div>
                 <div class="mobile-bar__item">
-                    <i class="fas fa-phone"></i>
+                    <a href="tel:+7 (900) 000-00-00"><i class="fas fa-phone"></i></a>
                 </div>
                 <div class="mobile-bar__item">
                     <a href="https://wa.me/79200000000"><i class="fab fa-whatsapp"></i></a>
@@ -493,7 +493,7 @@
 
 
 
-        
+
         <nav class="mobile__nav">
             <ul class="mobile__nav-list">
                 <li class="mobile__nav-item">
